fix nowrap

--- a/src/ui/components/usersListTable/UsersListTable.scss
+++ b/src/ui/components/usersListTable/UsersListTable.scss
@@ -55,6 +55,7 @@ $container-padding-v: 24px;
       max-width: 25ch;
       overflow: hidden;
       text-overflow: ellipsis;
+      white-space: nowrap;
 
       &:not(:last-child) {
         margin-bottom: 4px;
@@ -88,6 +89,7 @@ $container-padding-v: 24px;
       max-width: 25ch;
       text-overflow: ellipsis;
       overflow: hidden;
+      white-space: nowrap;
       .thirdparty-name {
         max-width: 10ch;
         text-overflow: inherit;
